--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.4.2",
     "@mui/lab": "^5.0.0-alpha.69",
     "@mui/material": "^5.4.2",
     "@testing-library/jest-dom": "^5.16.2",
@@ -14,7 +15,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-loading": "^2.0.3",
-    "react-query": "^3.34.15",    
+    "react-query": "^3.34.15",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
